@@ -1,0 +1,35 @@
+/*
+ * CDDL HEADER START
+ *
+ * The contents of this file are subject to the terms of the
+ * Common Development and Distribution License (the "License").
+ * You may not use this file except in compliance with the License.
+ *
+ * You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
+ * or http://www.opensolaris.org/os/licensing.
+ * See the License for the specific language governing permissions
+ * and limitations under the License.
+ *
+ * When distributing Covered Code, include this CDDL HEADER in each
+ * file and include the License file at usr/src/OPENSOLARIS.LICENSE.
+ * If applicable, add the following below this CDDL HEADER, with the
+ * fields enclosed by brackets "[]" replaced with your own identifying
+ * information: Portions Copyright [yyyy] [name of copyright owner]
+ *
+ * CDDL HEADER END
+ */
+
+/*
+ * Copyright 2013 Oracle, Inc.  All rights reserved.
+ * Use is subject to license terms.
+ */
+
+#ifndef _TEST_LIBPROC_LOOKUP_VICTIM_H
+#define _TEST_LIBPROC_LOOKUP_VICTIM_H
+
+void main_func(void);
+void lib_func(void);
+void interpose_func(void);
+void interposed_func(void);
+
+#endif
